# fastapi_opentaberna

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  update_versions.sh
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bug.md  core.md  feature.md  hotfix.md  improvement.md  tests.md
.github/workflows/: test-build-deploy.yml  test.yml
docs/: config.md  database.md
examples/: exception_usage.py
src/: Dockerfile
src/app/: main.py  requirements.txt
src/app/authorize/: __init__.py  keycloak.py
src/app/functions/: __init__.py
src/app/models/: __init__.py
src/app/routers/: __init__.py
src/app/shared/config/: enums.py  factory.py  loader.py  settings.py
src/app/shared/database/: __init__.py  base.py  engine.py  health.py  migrations.py  repository.py  session.py  transaction.py  utils.py
src/app/shared/exceptions/: __init__.py  base.py  enums.py  errors.py  factory.py  interfaces.py
src/app/shared/logger/: config.py  context.py  filters.py  formatters.py  handlers.py
src/app/shared/responses/: __init__.py  pagination.py  success.py
tests/: test_api.py  test_config.py  test_database_module.py  test_exceptions_module.py  test_logger_module.py
